chore: fixed gap in right container of header and added blocks to include js

--- a/course-v3/assets/css/mit-learn-header.scss
+++ b/course-v3/assets/css/mit-learn-header.scss
@@ -380,7 +380,8 @@ $mit-learn-font-weight-bold: 700;
 .mit-learn-official-logo {
   display: flex;
   align-items: center;
-  width: 64px;
+  padding: 0 0 0 16px;
+  width: 80px;
   height: 32px;
   text-decoration: none;
 }
